--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
         "@vitejs/plugin-vue": "^4.4.0",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.4",
         "axios": "^1.1.2",
         "bootstrap": "^5.3.2",
         "laravel-vite-plugin": "^0.8.0",
