--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "pinia": "^2.1.7",
         "sass": "^1.69.5",
         "simplebar": "^6.2.5",
+        "sweetalert2": "^11.9.0",
         "vite": "^4.0.0",
         "vue": "^3.3.7",
         "vue-dataset": "^3.6.1",
