--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^4.0.0",
         "vue": "^3.3.7",
         "vue-dataset": "^3.6.1",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
