--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.4.0",
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
