--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "@vuelidate/validators": "^2.0.4",
         "axios": "^1.1.2",
         "bootstrap": "^5.3.2",
+        "filepond": "^4.30.6",
+        "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-image-preview": "^4.6.12",
         "laravel-vite-plugin": "^0.8.0",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
@@ -21,6 +24,7 @@
         "vite": "^4.0.0",
         "vue": "^3.3.7",
         "vue-dataset": "^3.6.1",
+        "vue-filepond": "^7.0.4",
         "vue-router": "^4.2.5",
         "vue-select": "^4.0.0-beta.6",
         "vue-sweetalert2": "^5.0.5"
