--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -30,7 +30,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Install Node Dependencies
-        run: npm install
+        run: npm ci
 
       - name: Generate key
         run: php artisan key:generate
