--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vitejs/plugin-vue": "^4.4.0",
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
         "bootstrap": "^5.3.2",
         "filepond": "^4.30.6",
